# Subscription-Tracker

./: .gitignore  README.md  app.js  index.html  pyproject.toml  styles.css  supabaseClient.js
src/subscription_tracker/: __init__.py  models.py  tracker.py
supabase/functions/weekly-summary-email/: index.ts
supabase/migrations/: 20260324_create_subscription_renewals.sql  20260325_admin_only_renewal_mutations.sql  20260325_align_subscription_renewals_schema.sql  20260325_remove_vendor_from_subscriptions.sql  20260326_add_subscription_workbench_workflow_fields.sql  20260327_add_subscription_serial_lookup_index.sql  20260327_add_subscription_workflow_history.sql  20260327_add_subscriptions_serial_customer_columns.sql  20260327_update_workbench_progress_constraints.sql  20260407_add_weekly_summary_email_automation.sql  20260407_add_weekly_summary_email_run_logs.sql
tests/: test_tracker.py
