[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subscription-tracker"
version = "0.1.0"
description = "Scaffold for a subscription tracking application"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Subscription Tracker Contributors" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
